<resources>
    <string name="app_name">Corona Care</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="menu">Menu</string>
    <string name="plasma">Plasma</string>
    <string name="analysis">Analysis</string>
    <string name="minus">-</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="text_continue">Continue</string>
    <string name="contact_with_patient">Contact With Patient</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="runny_nose">Runny Nose</string>
    <string name="nasal_congestion">Nasal Congestion</string>
    <string name="pains">Pains</string>
    <string name="sore_throat">Sore Throat</string>
    <string name="difficulty_in_breathing">Difficulty In Breathing</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="tiredness">Tiredness</string>
    <string name="fever">Fever</string>
    <string name="rska_note">Please provide the following information of your\'s last 14 days to calculate the risk assessment of corona positive</string>
    <string name="account">Account</string>
    <string name="emergency">Emergency</string>
    <string name="about">About</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="logout">Logout</string>
    <string name="diagnostic_centers">Diagnostic Centers</string>
    <string name="hotlines">Hotlines</string>
    <string name="ambulance">Ambulance</string>
    <string name="see_all">See All</string>
    <string name="consult_with_them_from_home">Consult with them from home</string>
    <string name="doctors_nearby_you">Doctors Nearby You</string>
    <string name="protect_yourself_and_others">Protect yourself and others</string>
    <string name="common_prevention_tips">Common Prevention Tips</string>
    <string name="welcome">Welcome</string>
    <string name="tips_mask_wear">Wear a mask when physical distancing is not possible.</string>
    <string name="tips_sneeze">Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</string>
    <string name="tips_handwash">Clean your hands often. Use soap and water, or an alcohol-based hand rub.</string>
    <string name="tips_cough">If you have a fever, cough and difficulty breathing, seek medical attention.</string>
    <string name="tips_social_distance">Maintain a safe distance from anyone who is coughing or sneezing.</string>
    <string name="tips_touching">Do not touch your eyes, nose or mouth.</string>
    <string name="tips_stay_home">Stay home if you feel unwell.</string>
    <string name="faq_content">a</string>
    <string name="terms_content">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Mohammad Wahid, Anika Tabassum Medha, Md. Razu Ahmed.\n\nThey are committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n\nThe Corona Care app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Corona Care app won’t work properly or at all.\n\nYou should be aware that there are certain things that they will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but they cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n\nIf you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third-party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e., region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n\nAlong the same lines, they cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, they cannot accept responsibility.\n\nWith respect to their\'s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavor to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. They accept no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n\nAt some point, we may wish to update the app. The app is currently available on Android - the requirements for system (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. They do not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, we may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n\n<b>Changes to This Terms and Conditions</b>\nWe may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These terms and conditions are effective as of January 1, 2021.\n\n<b>Contact Us</b>\nIf you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact me at <b>mohammadwahid349@gmail.com</b>.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="thana">Thana</string>
    <string name="district">District</string>
    <string name="occupation">Occupation</string>
    <string name="qualification">Qualification</string>
    <string name="specializations">Specializations</string>
    <string name="experience">Experience</string>
    <string name="fee">Fee</string>
    <string name="offdays">Offdays</string>
    <string name="hospital_name">Hospital\'s Name</string>
    <string name="hospital_thana">Hospital\'s Thana</string>
    <string name="hospital_district">Hospital\'s District</string>
    <string name="check_again">Check Again</string>
    <string name="lwm_title">Verify your mobile</string>
    <string name="lwm_desc">We will send you a <b>One Time Password</b>\non your mobile</string>
    <string name="mobile_number_hint">019XXXXXXXXX</string>
    <string name="last_active">Last Active</string>
    <string name="age">Age</string>
    <string name="practice_time">Practice Time</string>
    <string name="hospital_mobile">Hospital\'s Mobile No</string>
</resources>