<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.view.doctor.DoctorAboutFragment">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/qualification"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_qualification"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/specializations"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_specializations"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/experience"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_experience"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/fee"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_fee"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/practice_time"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_ptime"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/offdays"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_offdays"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/hospital_name"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_hname"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/hospital_thana"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_hthana"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/hospital_district"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_hdistrict"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/hospital_mobile"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dpa_hmobile"
            android:text="@string/minus"
            android:textColor="@color/colorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>