<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.mobile.LoginWithMobileActivity">

    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/gr_mobile_sms"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/lwm_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/lwm_desc"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:layout_marginBottom="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.TextInputLayout"
                    app:startIconDrawable="@drawable/ic_mobile_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTheme.TextInputEditText"
                        android:id="@+id/lwm_number"
                        android:hint="@string/mobile_number_hint"
                        android:inputType="phone"
                        android:digits="+0123456789"
                        android:letterSpacing=".2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/AppTheme.TextInputLabel"
                    android:text="@string/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/AppTheme.Button.UnelevatedButton"
                app:cornerRadius="24dp"
                android:id="@+id/lwm_cont_btn"
                android:text="@string/text_continue"
                android:paddingVertical="20dp"
                android:minWidth="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>