<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.analysis.AnalysisResultActivity">

    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/gr_avatar"
                android:id="@+id/rskar_photo"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:contentDescription="@string/app_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rskar_content"
                android:text="@string/minus"
                android:justificationMode="inter_word"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                style="@style/AppTheme.Button.UnelevatedButton"
                app:cornerRadius="24dp"
                android:id="@+id/rskar_btn"
                android:text="@string/check_again"
                android:layout_marginBottom="16dp"
                android:paddingVertical="20dp"
                android:minWidth="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>